@@ -534,6 +534,25 @@ name|h
 operator|.
 name|validateUpdate
 argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"13"
+argument_list|,
+literal|"teststop"
+argument_list|,
+literal|"partisan political machine"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|h
+operator|.
+name|validateUpdate
+argument_list|(
 name|commit
 argument_list|()
 argument_list|)
@@ -951,6 +970,155 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|testCollateWithOverride
+specifier|public
+name|void
+name|testCollateWithOverride
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_DICT
+argument_list|,
+literal|"direct"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"10"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_MAX_COLLATION_TRIES
+argument_list|,
+literal|"10"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_MAX_COLLATIONS
+argument_list|,
+literal|"10"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"teststop"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"1"
+argument_list|,
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"partisian politcal mashine"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/str[@name='collation']='parisian political machine'"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_DICT
+argument_list|,
+literal|"direct"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"10"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_MAX_COLLATION_TRIES
+argument_list|,
+literal|"10"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_MAX_COLLATIONS
+argument_list|,
+literal|"10"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"teststop"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"1"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE_PARAM_OVERRIDE
+operator|+
+literal|"mm"
+argument_list|,
+literal|"100%"
+argument_list|,
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"partisian politcal mashine"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/str[@name='collation']='partisan political machine'"
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
